0.8.4
- Added PLONE30 constant.
- Made application of StringIO monkey patch conditional, as it is part of
  CMFPlone/patches starting with Plone 3.0
- Allow to pass a base profile to the setupPloneSite function.
- Apply StringIO monkey-patch from PlacelessTranslationService.

0.8.2
- Added support for passing a list of GenericSetup extension profiles
  to the setupPloneSite function.

0.8.0
- Added support for Plone 2.5.
