@@ -1,1 +1,1 @@
-0.8.4 (SVN/UNRELEASED)
+0.8.4
