@@ -1,4 +1,10 @@
-"""Stop gap fix for abuse of ZTC.installProduct('Five') """
+#
+# Stop gap fix for abuse of ZTC.installProduct('Five')
+#
+
+# $Id$
+
+from Testing.ZopeTestCase.utils import *
 
 try:
     from zope.testing.cleanup import cleanUp
@@ -9,22 +15,24 @@ except ImportError:
         # Zope <= 2.7
         def cleanUp(): pass
 
-# will appear soon in ZTC
+
 def setDebugMode(mode):
     """
     Allows manual setting of Five's inspection of debug mode to allow for
     zcml to fail meaningfully
     """
     import Products.Five.fiveconfigure as fc
-    fc.debug_mode=mode
+    fc.debug_mode = mode
+
 
 def safe_load_site():
     """Load entire component architecture (w/ debug mode on)"""
     cleanUp()
     setDebugMode(1)
-    from Products.Five import zcml
+    import Products.Five.zcml as zcml
     zcml.load_site()
     setDebugMode(0)
+
 
 def safe_load_site_wrapper(function):
     """Wrap function with a temporary loading of entire component architecture"""
@@ -33,6 +41,7 @@ def safe_load_site_wrapper(function):
         value = function(*args, **kw)
         cleanUp()
         import Products.Five.zcml as zcml
-        zcml._initialized=False
+        zcml._initialized = 0
         return value
     return wrapper
+
